docs(comparison): fix file upload support for Chrome DevTools MCP

--- a/docs/comparison.mdx
+++ b/docs/comparison.mdx
@@ -316,7 +316,7 @@ Features no competitor offers:
 |-----------|:-:|:-:|:-:|
 | Cross-browser | Yes (Chromium/Firefox/WebKit) | No | No |
 | Screenshots | Yes | Yes | No |
-| File upload | Yes | Yes | No |
+| File upload | Yes | Yes | Yes |
 | PDF export | Yes | No | No |
 | Network monitoring | Yes | Yes | No |
 | Console logs | Yes | Yes | No |
