docs(comparison): fix model versions and Opus 4.6 pricing in cost table
Added version numbers (Sonnet 4.6, Opus 4.6). Fixed Opus pricing
from $15/$75 (legacy Opus 4.0) to $5/$25 (Opus 4.6).

--- a/docs/comparison.mdx
+++ b/docs/comparison.mdx
@@ -235,8 +235,8 @@ Based on Bedrock API token usage. Input tokens at input rate, output tokens at o
 
 | Model | Playwright MCP | Chrome DevTools MCP | OpenBrowser MCP |
 |-------|---------------:|--------------------:|----------------:|
-| Claude Sonnet ($3/$15 per M) | $0.47 | $0.96 | **$0.18** |
-| Claude Opus ($15/$75 per M) | $2.35 | $4.78 | **$0.91** |
+| Claude Sonnet 4.6 ($3/$15 per M) | $0.47 | $0.96 | **$0.18** |
+| Claude Opus 4.6 ($5/$25 per M) | $0.78 | $1.59 | **$0.30** |
 
 <img src="/images/benchmark_cost.png" alt="Cost Per Benchmark Run by Model" style={{width: "100%", maxWidth: 800}} />
 
